[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/SizeableOak.gd" type="Script" id=2]
[ext_resource path="res://ChopSparks.tscn" type="PackedScene" id=3]
[ext_resource path="res://Trees/ChoppieStatueStand.png" type="Texture" id=4]
[ext_resource path="res://Characters/Skins/StatueChoppie.png" type="Texture" id=5]
[ext_resource path="res://ChoppieStatue.gd" type="Script" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.346337 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 13, 27, 1 )
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -7.5
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
color = Color( 0.431373, 0.545098, 0.219608, 1 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.0461538, 0.438462, 0.646154, 0.847222 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.807843, 1, 1, 1, 0.792157, 1, 1, 1, 0.505882, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.828231, 0 ), -10.7319, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 10, 35, 1 )
flag_disable_z = true
direction = Vector3( 0, 5, 0 )
spread = 18.9
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
angular_velocity = 100.0
angular_velocity_random = 0.81
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.15
scale_curve = SubResource( 9 )
color = Color( 0, 0.827451, 0.866667, 1 )
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=13]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss/Stomp1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss/Stomp2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "Stand"
tracks/0/type = "value"
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0.138462, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 110.0
flatness = 1.0
gravity = Vector3( 0, 45, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 60.0
scale = 0.25
color = Color( 0.309804, 0.611765, 0.592157, 1 )
color_ramp = SubResource( 16 )

[sub_resource type="Animation" id=22]
resource_name = "Drop"
tracks/0/type = "value"
tracks/0/path = NodePath("../Guard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 62, -41 ), Vector2( 62, 250 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Guard2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -109, -49 ), Vector2( -109, 250 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Move"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.9, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -28 ), Vector2( -81, -28 ), Vector2( 35, -28 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Base:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, -39 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChoppieStatue/CollisionPolygon2D5:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Guard2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -106, -280 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Guard:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 62, -280 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Start"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -39 ), Vector2( -3, -45 ), Vector2( -3, -39 ), Vector2( -3, -41 ), Vector2( -3, -28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Stomp1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Stomp2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChoppieStatue/CollisionPolygon2D5:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -16 ), Vector2( -3, -10 ), Vector2( -3, -16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChoppieStatue/CollisionPolygon2D5:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Base:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Guard2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -106, -280 ), Vector2( -109, -49 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Guard:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 62, -280 ), Vector2( 62, -41 ) ]
}

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 2.5, 3 )

[node name="ChoppieStatue" type="Node2D"]
script = ExtResource( 6 )
healthFrame = 1
healthBackFrame = 1

[node name="Boss" type="Sprite" parent="."]
position = Vector2( -3, -39 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
hframes = 4

[node name="ChoppieStatue" type="StaticBody2D" parent="Boss"]
position = Vector2( 0.75, 9.75 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 39
collision_mask = 2147483655
script = ExtResource( 2 )
hitsForSeed = 4

[node name="Area2D" type="Area2D" parent="Boss/ChoppieStatue"]
position = Vector2( 1, -39.4 )
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Boss/ChoppieStatue/Area2D"]
position = Vector2( -4, 23.4 )
polygon = PoolVector2Array( 21, 16, -14, 16, -9, 6, -1.9, 5.10815, -1.9, -42.6, 10.1, -42.6, 10.1, 5.10815, 17, 6 )

[node name="Particles2D" type="Particles2D" parent="Boss/ChoppieStatue"]
position = Vector2( 0.900002, -39.4 )
emitting = false
amount = 2
lifetime = 9.0
process_material = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="Boss/ChoppieStatue"]
position = Vector2( -19, -41 )

[node name="Position2D2" type="Position2D" parent="Boss/ChoppieStatue"]
position = Vector2( 13, -33 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Boss/ChoppieStatue"]
position = Vector2( -3, -16 )
polygon = PoolVector2Array( 21.1, 16.4, 16.1, 11.4, -8.9, 11.4, -13.9, 16.4 )

[node name="SeedHolder" type="Node" parent="Boss/ChoppieStatue"]

[node name="ChopSparks" parent="Boss/ChoppieStatue" instance=ExtResource( 3 )]
position = Vector2( 1, -39 )
amount = 30
process_material = SubResource( 10 )

[node name="Run" type="AnimationPlayer" parent="Boss"]
root_node = NodePath("../..")
autoplay = "Stand"
anims/Run = SubResource( 13 )
anims/Stand = SubResource( 14 )

[node name="Stomp1" type="Particles2D" parent="Boss"]
position = Vector2( 0, 7 )
emitting = false
amount = 12
lifetime = 0.4
one_shot = true
explosiveness = 0.88
process_material = SubResource( 17 )

[node name="Stomp2" type="Particles2D" parent="Boss"]
position = Vector2( 2, 7 )
emitting = false
amount = 12
lifetime = 0.4
one_shot = true
explosiveness = 0.88
process_material = SubResource( 17 )

[node name="Move" type="AnimationPlayer" parent="Boss"]
anims/Drop = SubResource( 22 )
anims/Move = SubResource( 18 )
anims/RESET = SubResource( 19 )
anims/Start = SubResource( 20 )

[node name="Head" type="Area2D" parent="Boss"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Head"]
position = Vector2( 1, -4 )
shape = SubResource( 21 )
disabled = true

[node name="Guard" type="Sprite" parent="."]
position = Vector2( 62, -280 )
scale = Vector2( 6, 6 )
texture = ExtResource( 5 )
hframes = 4

[node name="StaticBody2D" type="StaticBody2D" parent="Guard"]
collision_layer = 6
collision_mask = 0

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Guard/StaticBody2D"]
position = Vector2( 0, 4.25 )
scale = Vector2( 0.25, 0.25 )
polygon = PoolVector2Array( 10.1, 11.4, -1.9, 11.4, -1.9, -42.6, 10.1, -42.6 )

[node name="Guard2" type="Sprite" parent="."]
position = Vector2( -106, -280 )
scale = Vector2( 6, 6 )
texture = ExtResource( 5 )
hframes = 4

[node name="StaticBody2D" type="StaticBody2D" parent="Guard2"]
collision_layer = 6
collision_mask = 6

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Guard2/StaticBody2D"]
position = Vector2( 0, 4.25 )
scale = Vector2( 0.25, 0.25 )
polygon = PoolVector2Array( 10.1, 11.4, -1.9, 11.4, -1.9, -42.6, 10.1, -42.6 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -39.5 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="Boss/ChoppieStatue/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Boss/ChoppieStatue/Area2D" to="Boss/ChoppieStatue" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Boss/ChoppieStatue/Area2D" to="Boss/ChoppieStatue" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Boss/Head" to="." method="_on_Head_area_entered"]
